Spacing fix

--- a/css/main.css
+++ b/css/main.css
@@ -75,6 +75,7 @@ html {
   color: white;
   font-weight: bold;
   margin-bottom: 0.5em;
+  margin-top: 0.5em;
 }
 
 #bingo ul {
